--- a/index.html
+++ b/index.html
@@ -318,6 +318,26 @@
   },{threshold:.15});
   sections.forEach(s=>obs.observe(s));
 </script>
+<a href="https://wa.me/5598981653105" target="_blank" rel="noopener"
+   style="
+    position:fixed;
+    right:18px;
+    bottom:18px;
+    z-index:9999;
+    padding:14px 18px;
+    border-radius:999px;
+    background:#0f172a;
+    color:#fff;
+    text-decoration:none;
+    font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
+    font-weight:500;
+    box-shadow:0 18px 45px rgba(15,23,42,.35);
+    display:inline-flex;
+    align-items:center;
+    gap:10px;
+  ">
+  💬 WhatsApp
+</a>
 
 </body>
 </html>
