--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <!-- TROQUE PELO SEU WHATSAPP -->
   <a class="btn" <div style="margin-top:12px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap;">
   <a class="btn" style="background:#ffffff;color:#111827;border:1px solid #e5e7eb;box-shadow:0 14px 35px rgba(15,23,42,.10);"
-     href="https://instagram.com/https://www.instagram.com/soares.saudedeverdade?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener">
+     href="https://www.instagram.com/soares.saudedeverdade?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener">
     📷 Instagram
   </a>
 </div>
